--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "json2csv": "^6.0.0-alpha.2",
     "xterm": "^5.3.0"
   }
